tests/sema/fail/v35_fail_ptr_method.ep
# COMPILE_FAIL_CONTAINS: ptr cannot take the address of method Box__touch

type Box {
    value: i64
}

fun (box: Box) touch(): void {
}

fun main(): void {
    let callback = ptr(Box__touch)
}
